--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,24 @@
 #   K i k o   #
 # # # # # # # #
 
-# - markdown: kramdown
+# Basic
+name:               "Ethan Huang"
+description:        "blog"
+
+# jekyll-seo-tag, see: http://www.rubydoc.info/gems/jekyll-seo-tag/1.2.0
+url:                "https://13h.tw"
+author:             "Ethan Huang"
+twitter:
+  username:         "ethanhuang13"
+github_username:    "ethanhuang13"
+
+# URL
+baseurl:            ""
+#baseurl:            "" #For Root Domain
+permalink:          "/:year/:month/:day/:title.html"
+
+# Markdown
+markdown:           kramdown
 
 # Sass
 sass:
@@ -23,30 +40,5 @@ defaults:
     values:
       layout:       "post"
 
-title: "Ethan Huang"
-tagline: ""
-description: ""
-credits: ""
-baseurl: ""
-url: "https://13h.tw"
-markdown: "kramdown"
-username: "ethanhuang13"
-microblog_user: "ethanhuang13"
-permalink: "/:year/:month/:day/:title.html"
-relative_permalinks: false
-author: "Ethan Huang"
-name: "Ethan Huang"
-gravatar_hash: "61a2325aa2033a3d43c8edfb43718562"
-avatar: "./assets/images/avatar.jpg"
-full_name: "Ethan Huang"
-bio: "I write ccool apps for living."
-twitter_username: "ethanhuang13"
-github_username: "ethanhuang13"
-instagram_username: ""
-paginate: 20
-paginate_path: "/page/:num/"
-timezone: "Taipei"
-site_id: "3744"
-plugins: ["jekyll-paginate"]
-itunes_category: "Society & Culture"
-itunes_subcategory: "Personal Journals"
+plugins:
+  - jekyll-seo-tag
